# usb-power-osd-qt

./: .releaserc.json  CMakeLists.txt  Info.plist  Info.plist.in  LICENSE.txt  README.md  build_linux.sh  build_mingw.sh  package-lock.json  package.json  wix-shortcuts.xml
.github/actions/: BuildUSBPowerOSDQt.yml
.github/workflows/: main.yml
resources/: resources.qrc
src/: AboutDialog.cpp  AboutDialog.h  AudioGenerator.h  BluetoothManager.cpp  BluetoothManager.h  CurrentGraph.cpp  CurrentGraph.h  DeviceManager.cpp  DeviceManager.h  DeviceSelectionDialog.cpp  DeviceSelectionDialog.h  Main.cpp  MainWindow.cpp  MainWindow.h  MeasurementHistory.cpp  MeasurementHistory.h  OsdSettings.cpp  OsdSettings.h  PowerData.h  PowerDelivery.cpp  PowerDelivery.h  PowerMonitor.cpp  PowerMonitor.h  SerialManager.cpp  SerialManager.h  SettingsDialog.cpp  SettingsDialog.h  hexdump.h  lgplv3.cpp  lgplv3.h
ui/: Settings.ui
